Change select name from default

--- a/force-app/main/default/lwc/nksGetStoUtility/nksGetStoUtility.html
+++ b/force-app/main/default/lwc/nksGetStoUtility/nksGetStoUtility.html
@@ -2,7 +2,7 @@
     <div>
         <div class="slds-m-horizontal_medium">
             <lightning-select
-                name="tickets"
+                name="queues"
                 label="Hvilken kø vil du plukke fra?"
                 value={value}
                 options={options}
