Hide icons for SR

--- a/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.html
+++ b/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.html
@@ -12,8 +12,8 @@
                 <img
                     class="iconcolor slds-is-relative slds-show"
                     src={dialog}
-                    alt="Samtalereferat"
                     id="b"
+                    aria-hidden="true"
                     style="margin: auto; width: 24px; margin-right: 32px; margin-left: 32px"
                 />
             </div>
