--- a/force-app/main/default/lwc/stoNewsEditor/stoNewsEditor.html
+++ b/force-app/main/default/lwc/stoNewsEditor/stoNewsEditor.html
@@ -1,31 +1,38 @@
 <template>
-    <lightning-layout horizontal-align="center" pull-to-boundary="small" vertical-align="start">
-        <lightning-layout-item size="6">
-            <lightning-card variant="Narrow" title="Hello" icon-name="standard:account">
+    <lightning-card variant="Narrow" title="Hello" icon-name="standard:account">
+        <lightning-layout>
+            <lightning-layout-item size="6" class="slds-border_right">
                 <template if:true={loopNews} for:each={loopNews} for:item="news">
                     <div key={news.category}>
-                        <p>I am the {news.category}</p>
-                        <ul if:true={news.news}>
+                        <h3 class="slds-text-title_bold slds-p-left_medium">{news.category}</h3>
+                        <div if:true={news.news}>
                             <template for:each={news.news} for:item="newsItem">
-                                <div key={newsItem.Id}>
-                                    <li>{newsItem.STO_Header__c}</li>
-                                    <lightning-button
-                                        variant="base"
-                                        data-id={newsItem.Id}
-                                        label="Button Label"
-                                        onclick={handleClick}
-                                    ></lightning-button>
-                                </div>
+                                <lightning-layout
+                                    key={newsItem.Id}
+                                    horizontal-align="center"
+                                    pull-to-boundary="small"
+                                    vertical-align="start"
+                                    class="slds-m-bottom_medium"
+                                >
+                                    <lightning-layout-item size="8" class="slds-box" data-target-id={newsItem.Id}>
+                                        <p>{newsItem.STO_Header__c}</p>
+                                    </lightning-layout-item>
+                                    <lightning-layout-item>
+                                        <lightning-button
+                                            variant="brand"
+                                            icon-name="utility:custom_apps"
+                                            data-id={newsItem.Id}
+                                            label="Endre"
+                                            onclick={handleClick}
+                                        ></lightning-button>
+                                    </lightning-layout-item>
+                                </lightning-layout>
                             </template>
-                        </ul>
+                        </div>
                     </div>
-                    <!-- <li key={news.Id}>{con.STO_Category__c}</li> -->
                 </template>
-            </lightning-card>
-        </lightning-layout-item>
-        <lightning-layout-item size="6">
-            <lightning-card variant="Narrow" title="Hello" icon-name="standard:account">
-                Here I display:
+            </lightning-layout-item>
+            <lightning-layout-item class="slds-m-horizontal_medium">
                 <div lwc:if={selectedNews}>
                     <lightning-input
                         data-id="title"
@@ -37,13 +44,24 @@
                         data-id="body"
                         value={selectedNews.STO_Body__c}
                     ></lightning-input-rich-text>
-                    <lightning-button
-                        variant="base"
-                        label="Lagre endringer"
-                        onclick={saveSelectedThing}
-                    ></lightning-button>
+                    <lightning-layout horizontal-align="end" style="gap: 10px">
+                        <lightning-layout-item>
+                            <lightning-button
+                                variant="base"
+                                label="Nullstill endringer"
+                                onclick={resetChanges}
+                            ></lightning-button>
+                        </lightning-layout-item>
+                        <lightning-layout-item>
+                            <lightning-button
+                                variant="brand"
+                                label="Lagre endringer"
+                                onclick={saveSelectedThing}
+                            ></lightning-button>
+                        </lightning-layout-item>
+                    </lightning-layout>
                 </div>
-            </lightning-card>
-        </lightning-layout-item>
-    </lightning-layout>
+            </lightning-layout-item>
+        </lightning-layout>
+    </lightning-card>
 </template>
