--- a/force-app/main/default/lwc/nksGetStoUtility/nksGetStoUtility.html
+++ b/force-app/main/default/lwc/nksGetStoUtility/nksGetStoUtility.html
@@ -3,7 +3,7 @@
         <div class="slds-m-horizontal_medium">
             <lightning-select
                 name="queues"
-                label="Hvilken kø vil du plukke fra?"
+                label="Hvilken tjeneste vil du besvare?"
                 value={value}
                 options={options}
                 onchange={handleChange}
