Add fedrekvote component

--- a/force-app/main/default/lwc/dsRadio/dsRadio.html
+++ b/force-app/main/default/lwc/dsRadio/dsRadio.html
@@ -13,7 +13,7 @@
                             id={option.id}
                             data-id={option.id}
                             aria-invalid="false"
-                            name="radioGroupName-navds"
+                            name={radioName}
                             type="radio"
                             class="navds-radio__input"
                             value={option.value}
