--- a/force-app/main/default/lwc/nksFedrekvotesaken/nksFedrekvotesaken.html
+++ b/force-app/main/default/lwc/nksFedrekvotesaken/nksFedrekvotesaken.html
@@ -13,7 +13,7 @@
                 class="text-center"
                 style="background-color: #fff; display: block; padding: 1rem 1rem 1rem 1rem; border-radius: 4px"
             >
-                <h2 class="navds-labels blokk-s" style="color: #0067c5">Fedrekvotesaken</h2>
+                <h2 class="navds-label" style="color: #0067c5">Fedrekvotesaken</h2>
 
                 <div class="descholder slds-var-m-bottom_large">
                     <p class="navds-body-short navds-body-short--small blokk-xs description">
