--- a/force-app/main/default/lwc/nksViewThread/nksViewThread.html
+++ b/force-app/main/default/lwc/nksViewThread/nksViewThread.html
@@ -1,6 +1,6 @@
 <template>
     <c-crm-messaging-community-thread-viewer
-        record-id={recordId}
+        record-id={_recordId}
         max-length={maxLength}
     ></c-crm-messaging-community-thread-viewer>
 </template>
