Remove temporary chat layout fix

--- a/force-app/main/default/lwc/nksGetStoUtility/nksGetStoUtility.html
+++ b/force-app/main/default/lwc/nksGetStoUtility/nksGetStoUtility.html
@@ -484,5 +484,5 @@
             </section>
         </template>
     </div>
-    <c-morten-font></c-morten-font>
+    <!-- <c-morten-font></c-morten-font> -->
 </template>
