--- a/force-app/main/default/lwc/nksFedrekvotesaken/nksFedrekvotesaken.html
+++ b/force-app/main/default/lwc/nksFedrekvotesaken/nksFedrekvotesaken.html
@@ -55,6 +55,7 @@
                                 type="tel"
                                 maxlength="8"
                                 class="phoneNumber"
+                                required="true"
                                 label="Ditt telefonnummer"
                                 style="width: 195.2px; margin-bottom: 1rem; margin-top: 2rem"
                             ></c-ds-text-field>
