Styling and text changes

--- a/force-app/main/default/lwc/nksFedrekvotesaken/nksFedrekvotesaken.html
+++ b/force-app/main/default/lwc/nksFedrekvotesaken/nksFedrekvotesaken.html
@@ -38,15 +38,15 @@
                 </template>
                 <template lwc:else>
                     <template lwc:if={hasNavTask}>
-                        <p style="margin-bottom: 3rem">
+                        <p style="margin-top: 1.5rem; margin-bottom: 1.5rem">
                             Takk for informasjonen. Vi tar kontakt hvis vi trenger flere opplysninger fra deg.
                         </p>
                     </template>
                     <template lwc:else>
                         <div class="descholder slds-var-m-bottom_large">
                             <p class="navds-body-short navds-body-short--small blokk-xs description">
-                                Hvis du kan være berørt av fedrekvotesaken, ber vi om at du fyller ut dette skjemaet. Da
-                                kan vi vurdere saken din. Du blir kontaktet hvis vi trenger flere opplysninger fra deg.
+                                Hvis du kan være berørt av fedrekvotesaken, ber vi om at du fyller ut dette skjemaet så
+                                vi kan vurdere saken din. Du blir kontaktet hvis vi trenger flere opplysninger fra deg.
                             </p>
                         </div>
                         <div class="text-start addMargin navds-form-field navds-form-field--medium">
