Inform user about message in innboks

--- a/force-app/main/default/lwc/nksFedrekvotesaken/nksFedrekvotesaken.html
+++ b/force-app/main/default/lwc/nksFedrekvotesaken/nksFedrekvotesaken.html
@@ -39,7 +39,8 @@
                 <template lwc:else>
                     <template lwc:if={hasNavTask}>
                         <p style="margin-top: 1.5rem; margin-bottom: 1.5rem">
-                            Takk for informasjonen. Vi tar kontakt hvis vi trenger flere opplysninger fra deg.
+                            Takk for informasjonen. Vi tar kontakt hvis vi trenger flere opplysninger fra deg. Vi har
+                            sendt deg en kvittering i din innboks.
                         </p>
                     </template>
                     <template lwc:else>
