--- a/force-app/main/default/lwc/nksFedrekvotesaken/nksFedrekvotesaken.html
+++ b/force-app/main/default/lwc/nksFedrekvotesaken/nksFedrekvotesaken.html
@@ -38,7 +38,7 @@
                 </template>
                 <template lwc:else>
                     <template lwc:if={hasNavTask}>
-                        <p style="margin-top: 1.5rem; margin-bottom: 1.5rem">
+                        <p style="margin-top: 1.5rem; margin-bottom: 1.5rem" aria-live="polite">
                             Takk for informasjonen. Vi tar kontakt hvis vi trenger flere opplysninger fra deg. Vi har
                             sendt deg en kvittering i din innboks.
                         </p>
@@ -79,7 +79,7 @@
 
                             <c-ds-text-field
                                 type="tel"
-                                maxlength="8"
+                                maxlength="12"
                                 class="phoneNumber"
                                 required="true"
                                 label="Ditt telefonnummer"
