--- a/force-app/main/default/lwc/nksFedrekvotesaken/nksFedrekvotesaken.html
+++ b/force-app/main/default/lwc/nksFedrekvotesaken/nksFedrekvotesaken.html
@@ -4,10 +4,7 @@
             <div class="header">
                 <h1 class="navds-heading navds-heading--2xlarge">Berørt av fedrekvotesaken?</h1>
             </div>
-            <div
-                class="text-center"
-                style="background-color: #fff; display: block; padding: 1rem 1rem 1rem 1rem; border-radius: 4px"
-            >
+            <div class="text-center sizeAround">
                 <template lwc:if={loading}>
                     <svg
                         tabindex="0"
@@ -39,8 +36,10 @@
                 <template lwc:else>
                     <template lwc:if={hasNavTask}>
                         <p style="margin-top: 1.5rem; margin-bottom: 1.5rem" aria-live="polite">
-                            Takk for informasjonen. Vi tar kontakt hvis vi trenger flere opplysninger fra deg. Vi har
-                            sendt deg en kvittering i din innboks.
+                            Saken din er registrert hos oss. Du finner oversikt over informasjonen du har gitt oss i
+                            innboksen din som en kvittering, eller referat fra tidligere dialog. Vi tar kontakt hvis vi
+                            trenger flere opplysninger fra deg. Trenger du å endre på informasjonen som du allerede har
+                            sendt inn, ber vi om at du <a href="https://www.nav.no/kontaktoss">kontakter oss</a>
                         </p>
                     </template>
                     <template lwc:else>
