--- a/force-app/main/default/lwc/nksFedrekvotesaken/nksFedrekvotesaken.html
+++ b/force-app/main/default/lwc/nksFedrekvotesaken/nksFedrekvotesaken.html
@@ -35,11 +35,13 @@
                 </template>
                 <template lwc:else>
                     <template lwc:if={hasNavTask}>
-                        <p style="margin-top: 1.5rem; margin-bottom: 1.5rem" aria-live="polite">
+                        <p style="margin: 1.5rem" aria-live="polite">
                             Saken din er registrert hos oss. Du finner oversikt over informasjonen du har gitt oss i
                             innboksen din som en kvittering, eller referat fra tidligere dialog. Vi tar kontakt hvis vi
-                            trenger flere opplysninger fra deg. Trenger du å endre på informasjonen som du allerede har
-                            sendt inn, ber vi om at du <a href="https://www.nav.no/kontaktoss">kontakter oss</a>
+                            trenger flere opplysninger fra deg.
+                            <br />
+                            Trenger du å endre på informasjonen som du allerede har sendt inn, ber vi om at du&nbsp;
+                            <a href="https://www.nav.no/kontaktoss">kontakter oss</a>
                         </p>
                     </template>
                     <template lwc:else>
