--- a/force-app/main/default/lwc/nksFedrekvotesaken/nksFedrekvotesaken.html
+++ b/force-app/main/default/lwc/nksFedrekvotesaken/nksFedrekvotesaken.html
@@ -41,7 +41,7 @@
                             trenger flere opplysninger fra deg.
                             <br />
                             Trenger du å endre på informasjonen som du allerede har sendt inn, ber vi om at du&nbsp;
-                            <a href="https://www.nav.no/kontaktoss">kontakter oss</a>
+                            <a href="https://www.nav.no/kontaktoss">kontakter oss</a>.
                         </p>
                     </template>
                     <template lwc:else>
