--- a/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.html
+++ b/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.html
@@ -6,7 +6,7 @@
                     <lightning-layout-item class="slds-size_6-of-12 slds-var-p-right_small">
                         <lightning-button
                             class="button"
-                            label={reserve}
+                            label={labels.RESERVE_LABEL}
                             variant="brand"
                             onclick={toggleFlow}
                         ></lightning-button>
@@ -14,7 +14,7 @@
                     <lightning-layout-item class="slds-size_6-of-12">
                         <lightning-button
                             class="button"
-                            label={putBack}
+                            label={labels.PUT_BACK_LABEL}
                             variant="brand"
                             onclick={toggleFlow}
                         ></lightning-button>
