customize stoMessageContainer for thread

--- a/force-app/main/default/lwc/crmStoMessagingV2/crmStoMessagingV2.html
+++ b/force-app/main/default/lwc/crmStoMessagingV2/crmStoMessagingV2.html
@@ -11,6 +11,7 @@
         onenglisheventtwo={handleEnglishEventTwo}
         class={computeClasses}
         show-quick
+        is-thread={isThread}
     >
         <template if:true={showMedskrivBlocker}>
             <div slot="messages">
