updated transfer flow

--- a/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.html
+++ b/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.html
@@ -69,7 +69,7 @@
                         <div class="slds-var-m-top_xx-small">
                             <lightning-card>
                                 <lightning-flow
-                                    flow-api-name="STO_Thread_Initiate_Transfer_v_2"
+                                    flow-api-name="STO_Transfer_v_2"
                                     flow-input-variables={inputVariables}
                                     onstatuschange={handleStatusChange}
                                 >
