added nl and text

--- a/force-app/main/default/lwc/nksFedrekvotesaken/nksFedrekvotesaken.html
+++ b/force-app/main/default/lwc/nksFedrekvotesaken/nksFedrekvotesaken.html
@@ -40,8 +40,10 @@
                             innboksen din som en kvittering, eller referat fra tidligere dialog. Vi tar kontakt hvis vi
                             trenger flere opplysninger fra deg.
                             <br />
+                            <br />
                             Trenger du å endre på informasjonen som du allerede har sendt inn, ber vi om at du&nbsp;
-                            <a href="https://www.nav.no/kontaktoss">kontakter oss</a>.
+                            <a href="https://www.nav.no/kontaktoss">kontakter oss</a>. Saksbehandlingstid er opp til 8
+                            måneder.
                         </p>
                     </template>
                     <template lwc:else>
